--- a/SigningIn_DatabaseV2/SigningIn_DatabaseV2/SigningIn_DatabaseV2.csproj
+++ b/SigningIn_DatabaseV2/SigningIn_DatabaseV2/SigningIn_DatabaseV2.csproj
@@ -75,6 +75,12 @@
     <Compile Include="CreateAccount.Designer.cs">
       <DependentUpon>CreateAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreateSurveyControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CreateSurveyControl.Designer.cs">
+      <DependentUpon>CreateSurveyControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -101,6 +107,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewSurveysControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewSurveysControl.Designer.cs">
+      <DependentUpon>ViewSurveysControl.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutMeControl.resx">
       <DependentUpon>AboutMeControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateAccount.resx">
       <DependentUpon>CreateAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateSurveyControl.resx">
+      <DependentUpon>CreateSurveyControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -137,6 +152,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ViewSurveysControl.resx">
+      <DependentUpon>ViewSurveysControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
